--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: go
 go:
   - 1.8.3
+before_install:
+    - go get github.com/daviddengcn/go-colortext
+    - go get github.com/mattn/go-isatty
