--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+[metadata.heroku]
+  root-package = "github.com/covrom/gonec"
+  go-version = "1.11.2"
+  # install = [ "./..." ]
